--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -3,12 +3,44 @@
 {% load static %}
 
 {% block title %}
-Home Index
+name app - Home
 {% endblock title %}
 
 {% block content %}
 
 {% include "includes/navbar.html" %}
-<h1>Index</h1>
+
+<div class="container mt-5">
+    <div class="d-flex flex-column justify-content-center">
+        <p class="text-secondary mb-0 badge text-center" >Gestor de documentos</p>
+        <h1 class="h2 fw-bold m-0 text-center">Seguro. Organizado. Eficiente.</h1>
+        <div class="text-secondary text-center lh-base" style="max-width: 550px;">
+            La solución moderna para gestionar sus documentos. Almacene, colabore y realice un seguimiento de los cambios de forma segura en toda su organización.
+        </div>
+        <div class="mt-3">
+            <button type="button" class="btn btn-dark">Empezar</button>
+            <button type="button" class="btn btn-light">Aprender más</button>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-sm-6 mt-5">
+            <h2 class="h5 fw-bold">Colaboración</h2>
+            <p class="text-start text-secondary">
+                Haga que la colaboración sea fluida con las herramientas de revisión de código integradas.
+            </p>
+            <h2 class="h5 fw-bold">Automatización</h2>
+            <p class="text-start text-secondary">
+                Automatice su flujo de trabajo con integración continua.
+            </p>
+            <h2 class="h5 fw-bold">Escale</h2>
+            <p class="text-start text-secondary">
+                Implemente en la nube con un solo clic y escale con facilidad.
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <img src="{% static "image_0001.png" %}" alt="" srcset="" width="600px">
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
